--- a/css/index_m.css
+++ b/css/index_m.css
@@ -1,4 +1,4 @@
-@media(min-width: 1200px) {
+@media (max-width: 768px) {
     main {
         margin-bottom: 100px;
     }
@@ -13,7 +13,7 @@
     }
     .main_text {
         position: absolute;
-        width: 1200px;
+        width: 100%;
         margin: 0 auto;
         top: 50%;
         left: 50%;
@@ -22,12 +22,12 @@
         padding-left: 10px;
     }
     .main_text p {
-        font-size: 40px;
+        font-size: 2.5rem;
         letter-spacing: -3px;
         margin-bottom: 10px;
     }
     .main_text h2 {
-        font-size: 80px;
+        font-size: 5rem;
         font-weight: 600;
         letter-spacing: -5px;
         margin-bottom: 60px;
@@ -51,13 +51,14 @@
     .product-grid {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        gap: 40px;
-        max-width: 1200px;
+        /* gap: 10px; */
+        /* max-width: 1200px; */
+        width: 100%;
         margin: 0 auto;
     }
     .main-product-item {
         text-align: center;
-        padding: 40px;
+        padding: 10px;
         border-radius: 10px;
         transition: all 0.3s ease;
     }
@@ -73,7 +74,7 @@
         height: 100%;
     }
     .main-product-item h3 {
-        font-size: 24px;
+        font-size: 1.5rem;
         margin: 20px 0;
         color: #ff8800;
     }
@@ -104,7 +105,7 @@
     .main_cts02 ul li p {
         margin-top: 30px;
         font-weight: 600;
-        font-size: 20px;
+        font-size: 1.25rem;
         word-break: keep-all;
     }
     .main_cts02 ul li span {
@@ -116,7 +117,7 @@
     }
     .main_cts02 ul li p:last-child {
         font-weight: 200;
-        font-size: 16px;
+        font-size: 1rem;
         width: 70%;
         word-break: keep-all;
         margin: 25px auto 0;
@@ -157,7 +158,7 @@
         display: block;
         margin-top: 30px;
         text-align: center;
-        font-size: 20px;
+        font-size: 1.25rem;
         font-weight: 600;
     }
 
