--- a/css/style_m.css
+++ b/css/style_m.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 @import url("base.css");
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap');
-@media (min-width: 1200px){
+@media(max-width: 768px) {
     /*공통*/
     * {
         position: relative;
@@ -9,7 +9,8 @@
         font-family: "Noto Sans KR", sans-serif !important;
     }
     .width {
-        width: 1200px;
+        max-width: 100%;
+        width: 100%;
         margin: 0 auto;
     }
     #container {
@@ -68,7 +69,7 @@
         top: 0;
         left: 0;
         z-index: 1300;
-        width: 100%;
+        width: 100vw;
         transition: ease all 0.3s 0s;
     }
     .head_pc:hover {
@@ -169,7 +170,7 @@
         background: #333;
     }
     #ft_wr .ft_cts {
-        width: 1200px;
+        width: 100%;
         margin: 0 auto;
         padding: 35px 0;
         font-size: 14px;
@@ -239,4 +240,11 @@
     .align-center {
         text-align: center;
     }
+
+    img {
+        max-width: 100%;
+        height: auto;
+        display: block;
+    }
+
 }
