모바일 버전 대폭 수정

--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,9 @@
         align-items: center;
         justify-content: space-between;
     }
+    .head_pc .mobile-menu {
+        display: none;
+    }
     .head_pc ul::after {
         content: "";
         display: block;
@@ -257,7 +260,7 @@
         margin: 0;
     }
     .title {
-        margin-top: 100px;
+        margin-top: 50px;
         margin-bottom: 50px;
     }
     .title h1 {
@@ -304,23 +307,54 @@
     /* Header */
     .head_pc {
         display: block;
-        background: rgba(0, 0, 0, 0.6);
+        background: rgba(0, 0, 0, 0.5);
         position: fixed;
         top: 0;
         left: 0;
         z-index: 1300;
         width: 100vw;
         transition: ease all 0.3s 0s;
+        /* padding : 15px; */
     }
-    .head_pc:hover {
+    /* .head_pc:hover {
         background: rgba(0, 0, 0, 1);
-    }
+    } */
     .head_pc .width {
+        padding : 15px;
         display: flex;
         align-items: center;
         justify-content: space-between;
     }
-    .head_pc ul::after {
+
+    .gnb {
+        display: block;
+        position: absolute;
+        justify-content: space-around;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        background: rgba(0,0,0,0.5);
+        /* margin-top: 15px; */
+    }
+    
+    .gnb ul {
+        display: flex;
+        text-align: center;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .gnb ul li {
+        float: none;
+    }
+
+    .gnb ul li a {
+        display: block;
+        padding: 12px 0;
+        font-size: 14px;
+    }
+
+    /* .head_pc ul::after {
         content: "";
         display: block;
         clear: both;
@@ -331,32 +365,32 @@
         display: block;
     }
     .head_pc ul li:hover .hover_menu {
-        display: block;
-    }
-    .head_pc ul li:hover a {
+        display: none;
+    } */
+    /* .head_pc ul li:hover a {
         color: rgba(254, 125, 39, 1);
-    }
+    } */
     .head_pc ul li a {
         color: #fff;
-        font-size: 18px;
+        font-size: 14px;
         text-align: center;
         display: block;
         width: 100%;
         text-align: center;
-        padding: 30px 40px;
+        padding: 10px 10px;
     }
     .head_pc ul li .hover_menu {
         display: none;
-        position: absolute;
+        /* position: absolute;
         top: 78px;
         background: rgba(0, 0, 0, 0.9);
-        width: 100%;
+        width: 100%; */
     }
-    .head_pc ul li .hover_menu li {
+    /* .head_pc ul li .hover_menu li {
         display: block;
         width: 100%;
-    }
-    .head_pc ul li .hover_menu li a {
+    } */
+    /* .head_pc ul li .hover_menu li a {
         width: 100%;
         display: block;
         font-size: 14px;
@@ -365,10 +399,13 @@
         transition: ease all 0.3s 0s;
         text-align: center;
         color: white;
-    }
-    .head_pc ul li .hover_menu li a:hover {
+    } */
+    /* .head_pc ul li .hover_menu li a:hover {
         background-color: rgba(254, 125, 39, 1);
         border-bottom: 1px solid rgba(255, 255, 255, 1);
+    } */
+    .lang-btn-box {
+        align-items: right;
     }
     .nav-item {
         margin-left: 30px;
