--- a/css/index.css
+++ b/css/index.css
@@ -163,8 +163,14 @@
 
 }
 @media (max-width: 768px) {
+    html {
+        font-size: 3.5vw;
+    }
     main {
         margin-bottom: 100px;
+    }
+    .main_sld {
+        margin-top: 100px;
     }
     /*슬라이드*/
     .bx-wrapper {
@@ -176,6 +182,8 @@
         display: none !important;
     }
     .main_text {
+
+        text-align: center;
         position: absolute;
         width: 100%;
         margin: 0 auto;
@@ -186,15 +194,14 @@
         padding-left: 10px;
     }
     .main_text p {
-        font-size: 2.5rem;
-        letter-spacing: -3px;
+        font-size: 1.25rem;
         margin-bottom: 10px;
     }
     .main_text h2 {
-        font-size: 5rem;
+        font-size: 2.5rem;
         font-weight: 600;
         letter-spacing: -5px;
-        margin-bottom: 60px;
+        margin-bottom: 2rem;
     }
     .main_text .sld_btn a {
         padding: 10px 20px;
@@ -253,9 +260,9 @@
     }
     /*icon*/
     .main_cts02 {
-        margin-top: 100px;
+        /* margin-top: 100px; */
         background: #f5f5f5;
-        padding: 100px 0;
+        padding: 80px 0;
     }
     .main_cts02 ul {
         width: 100%;
@@ -289,18 +296,22 @@
     }
     /*contact*/
     .contact {
-        margin-top: 65px;
+        margin-top: 50px;
         width: 100%;
     }
     .contact ul {
+        /* padding : 10px; */
         width: 100%;
-        margin: 0 auto;
+        /* margin: 0 auto; */
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
     }
     .contact ul li {
         display: inline-block;
         vertical-align: middle;
         width: calc(51.9% - 40px);
-        margin-right: 30px;
+        /* margin-right: 30px; */
     }
     .contact ul li:last-child {
         margin-right: 0;
@@ -320,7 +331,7 @@
     }
     .contact ul li p {
         display: block;
-        margin-top: 30px;
+        /* margin-top: 30px; */
         text-align: center;
         font-size: 1.25rem;
         font-weight: 600;
