--- a/css/about_us.css
+++ b/css/about_us.css
@@ -330,12 +330,13 @@
     font-weight: 600;
 }}
 
-@media(max-width:768px){
+@media(max-width:1199px){
 html {font-size: 9px}
 .main-container {
     width: 100%;
     max-width: 1920px;
     margin: 0 auto;
+    margin-top: 100px;
 }
 /* 페이지 헤더 스타일 */
 .page-title {
@@ -346,21 +347,21 @@ html {font-size: 9px}
 }
 /* ABOUT US 섹션 스타일 */
 .about-section {
-    padding: 80px 50px;
+    padding: 0px 50px;
     background-color: #fff;
 }
 .about-content {
     max-width: 1200px;
     width: 100%;
     margin: 0 auto;
-    padding: 50px 0;
+    padding-top: 50px;
     opacity: 1;
 }
 .about-content:last-child {
     border-bottom: none;
 }
 .about-subtitle {
-    font-size: 2rem;
+    font-size: 2.5rem;
     color: #e67a00;
     position: relative;
     margin-bottom: 10px;
@@ -390,18 +391,18 @@ html {font-size: 9px}
     font-weight: 600;
 }
 .about-text p {
-    font-size: 1rem;
+    font-size: 1.5rem;
     line-height: 1.8;
     color: #333;
     margin-bottom: 20px;
     text-align: center;
 }
 .ceo-signature {
-    margin-top: 50px;
+    margin-top: 30px;
     text-align: center;
 }
 .ceo-signature span {
-    font-size: 1rem;
+    font-size: 1.5rem;
     color: #333;
     font-weight: 500;
 }
@@ -428,15 +429,16 @@ html {font-size: 9px}
     position: relative;
     z-index: 1;
     text-align: center;
-    padding: 0 20px;
+    /* padding: 0 20px; */
 }
 .company-introduction p {
     color: #333;
     line-height: 1.8;
     margin-bottom: 20px;
-    font-size: 1rem;
+    font-size: 1.5rem;
 }
 .company-info-table {
+    font-size: 1.2rem;
     max-width: 800px;
     margin: 0 auto;
     background-color: transparent;
@@ -464,7 +466,7 @@ html {font-size: 9px}
 }
 .info-value {
     flex: 1;
-    padding: 15px 20px;
+    padding: 5px 10px;
     color: #333;
     background-color: #fff;
     display: flex;
@@ -483,7 +485,7 @@ html {font-size: 9px}
     margin: 20px auto 0;
     text-align: left;
     color: #333;
-    font-size: 1rem;
+    /* font-size: 1.5rem; */
     position: relative;
     z-index: 1;
     padding: 0 20px;
@@ -507,7 +509,7 @@ html {font-size: 9px}
     align-items: center;
     justify-content: center;
     color: white;
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: bold;
     margin: 0 auto;
     position: absolute;
@@ -528,10 +530,10 @@ html {font-size: 9px}
 }
 .timeline-item {
     position: relative;
-    margin-bottom: 50px;
+    /* margin-bottom: 20px; */
     display: flex;
     justify-content: center;
-    min-height: 120px;
+    /* min-height: 10px; */
 }
 .timeline-item:nth-child(odd) {
     padding-left: 50%;
@@ -556,7 +558,7 @@ html {font-size: 9px}
     position: absolute;
     color: #333;
     font-weight: bold;
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     top: 50%;
     transform: translateY(-50%);
 }
@@ -568,7 +570,7 @@ html {font-size: 9px}
 }
 .timeline-content {
     background-color: transparent;
-    padding: 20px 40px;
+    padding: 20px 0px;
     box-shadow: none;
     margin-top: 0;
     width: 100%;
@@ -576,17 +578,17 @@ html {font-size: 9px}
 }
 .timeline-item:nth-child(odd) .timeline-content {
     text-align: left;
-    margin-left: 40px;
+    margin-left: 20px;
 }
 .timeline-item:nth-child(even) .timeline-content {
     text-align: right;
-    margin-right: 40px;
+    margin-right: 20px;
 }
 .timeline-content p {
     margin-bottom: 8px;
     color: #333;
-    font-size: 1rem;
-    line-height: 1.6;
+    font-size: 1.5rem;
+    /* line-height: 1.6; */
 }
 .timeline-content p:last-child {
     margin-bottom: 0;
@@ -594,9 +596,9 @@ html {font-size: 9px}
 /* 고객사 그리드 스타일 */
 .clients-grid {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 40px;
-    padding: 40px;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+    /* padding: 10px; */
     max-width: 1200px;
     margin: 0 auto;
 }
@@ -604,7 +606,7 @@ html {font-size: 9px}
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 20px;
+    /* padding: 20px; */
     background: white;
     border-radius: 8px;
     transition: transform 0.3s ease;
@@ -621,14 +623,15 @@ html {font-size: 9px}
 .patents-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 40px;
+    gap: 20px;
     max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
+    /* margin: 0 auto; */
+    /* padding: 20px; */
+    margin-bottom: 50px;
 }
 .patent-item {
     background-color: #fff;
-    padding: 30px;
+    /* padding: 30px; */
     border-radius: 10px;
     text-align: center;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
@@ -646,7 +649,7 @@ html {font-size: 9px}
     margin-bottom: 20px;
 }
 .patent-item p {
-    font-size: 1rem;
+    font-size: 1.2rem;
     color: #333;
     font-weight: 500;
     margin-bottom: 5px;
