--- a/css/index.css
+++ b/css/index.css
@@ -162,7 +162,7 @@
     }
 
 }
-@media (max-width: 768px) {
+@media (max-width: 1199px) {
     html {
         font-size: 3.5vw;
     }
@@ -200,7 +200,7 @@
     .main_text h2 {
         font-size: 2.5rem;
         font-weight: 600;
-        letter-spacing: -5px;
+        /* letter-spacing: -5px; */
         margin-bottom: 2rem;
     }
     .main_text .sld_btn a {
