--- a/css/about_us.css
+++ b/css/about_us.css
@@ -625,7 +625,7 @@ html {font-size: 9px}
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     max-width: 800px;
-    /* margin: 0 auto; */
+    margin: 0 auto;
     /* padding: 20px; */
     margin-bottom: 50px;
 }
