--- a/css/product.css
+++ b/css/product.css
@@ -326,7 +326,12 @@
     text-align: center;
 }}
 
-@media (max-width:768px){/* 전체 레이아웃 */
+@media (max-width:1199px){/* 전체 레이아웃 */
+html {font-size: 9px;}
+.sub_title {
+    margin-top: 100px;
+}
+
 .main-container {
     max-width: 1200px;
     margin: 0 auto;
@@ -334,20 +339,27 @@
 }
 /* 제품 섹션 */
 .product-section {
-    padding: 40px 0;
+    padding: 20px 0;
 }
 
 /* 제품 탭 메뉴 */
 .product-tabs {
-    display: flex;
-    justify-content: center;
+    display: flex;  
+    overflow-x: auto;
+    white-space: nowrap;
+    /* justify-content: center; */
 }
+
+.product-tabs::-webkit-scrollbar {
+    display: none;
+}
+
 .tab-btn {
     padding: 12px 25px;
     margin: 0 10px;
     border: 1px solid #ddd;
     background: white;
-    font-size: 15px;
+    font-size: 1.5rem;
     color: #666;
     cursor: pointer;
     border-radius: 30px;
@@ -425,6 +437,7 @@
     width: 50%;
     margin: 10% 25% 10% 25%;
     text-align: center;
+    font-size: 1.25rem;
 }
 .detail-btn:hover {
     background-color: #e67a00;
