--- a/css/contact.css
+++ b/css/contact.css
@@ -1,4 +1,5 @@
-@media(min-width:1200px){.contact_content {
+@media(min-width:1200px){
+.contact_content {
   overflow: auto;
   width: 100%;
   padding: 30px;
@@ -84,17 +85,24 @@
   font-weight: bold;
 }}
 
-@media(max-width:768px){
+@media(max-width:1199px){
+  .sub_title {
+    margin-top: 100px;
+    white-space: nowrap;
+  }
+
 .contact_content {
   overflow: auto;
   width: 100%;
   padding: 30px;
-  margin: 80px 0;
+  margin: 50px 0;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
   font-size: 18px;
   font-weight: 300;
   line-height: 30px;
 }
+
+
 .contact_content img {
   display: block;
 }
